# poetry_modules

./: .gitignore
clock/: pyproject.toml
clock/clock/: date.py
clock/tests/: test_clock.py
panel/: pyproject.toml
panel/panel/: main.py
panel/tests/: test_main.py  test_panel.py
