[tool.poetry]
name = "panel"
version = "0.1.0"
description = ""
authors = ["Rodrigo de Castro Soares <rodrigo.m2n@gmail.com>"]
packages = [
    { include = "main", from = "panel" }
]

[tool.poetry.dependencies]
python = "^3.8"
clock = {path = "../clock", develop = true}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"